feat(calendar): add API endpoint to load calendar events for a specific date
- Implemented a new endpoint `/api/calendar/day` to fetch calendar events based on a provided date.
- Introduced `loadIcsEventsForDate` function in `calendarService.js` to handle ICS file parsing and event filtering.
- Added date normalization logic to ensure valid date formats are processed.
- Enhanced payload building to include calendar events in the widget payload.

refactor(payloadBuilder): normalize calendar events structure

- Updated `normalizeCalendarEvents` function to ensure consistent event formatting and validation.
- Integrated calendar events normalization into the widget payload construction.

refactor(stateStore): improve state normalization for calendar and todo widgets

- Added sanitization functions for calendar events, todo items, and note catalogs.
- Ensured that the state normalization process handles default values and data integrity.

fix(weatherService): map weather codes to appropriate icons

- Added `mapWeatherIcon` function to return corresponding weather icons based on weather codes.

--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
   "scripts": {
     "start": "node server.js",
     "dev": "node --watch server.js",
-    "check": "node --check server.js && node --check services/stateStore.js && node --check services/payloadBuilder.js && node --check services/piClient.js && node --check services/weatherService.js"
+    "check": "node --check server.js && node --check services/stateStore.js && node --check services/payloadBuilder.js && node --check services/piClient.js && node --check services/weatherService.js && node --check services/calendarService.js"
   },
   "keywords": [
     "raspberry-pi",
